# mcp-pandas

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-ci.yml  python-publish.yml
src/mcp_pandas/: __init__.py  server.py
src/tests/: test_server.py
src/tests/data/: Statements.xlsx
