[project]
name = "mcp-pandas"
version = "0.5.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anthony Shaw", email = "anthony.p.shaw@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "mcp",
    "openpyxl>=3.1.5",
    "pandas",
]

[project.scripts]
mcp-pandas = "mcp_pandas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "mcp[cli]"
]
